# CodeSearch

./: .gitignore  CLAUDE.md  CodeSearch_基本設計書.md  CodeSearch_要件定義書_v2.md  README.md  THIRD_PARTY_LICENSES  package-lock.json  package.json  playwright.config.ts  tsconfig.e2e.json  tsconfig.json  vite.config.ts
dist-package/data/: codesearch.db-shm  codesearch.db-wal  workspaces.json
docs/: 00_目次.md  01_バックエンド型定義_モデル.md  02_バックエンドモジュール詳細.md  03_フロントエンド型定義.md  04_フロントエンドストア詳細.md  05_フロントエンドコンポーネント詳細.md  06_IPC通信詳細.md  07_処理フロー.md  08_エラーハンドリング詳細.md  09_テスト設計.md  10_リリースexe統合テスト仕様.md
playwright-report/: index.html
public/grammars/: language-map.json
scripts/: package.mjs  package.sh
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/benches/: search_bench.rs
src-tauri/src/: errors.rs  lib.rs  main.rs  state.rs
src-tauri/src/commands/: bookmark.rs  config.rs  file.rs  mod.rs  search.rs  workspace.rs
src-tauri/src/encoding/: detector.rs
src-tauri/src/indexer/: index_manager.rs  mod.rs  schema.rs  searcher.rs  tokenizer.rs
src-tauri/src/indexer/tests/: integration_test.rs
src-tauri/src/models/: bookmark.rs  config.rs  file.rs  search.rs  workspace.rs
src-tauri/src/services/: bookmark_service.rs  config_service.rs  file_service.rs  mod.rs  search_service.rs  workspace_service.rs
src-tauri/src/storage/: bookmark_repo.rs  database.rs  history_repo.rs  mod.rs
src-tauri/src/watcher/: file_watcher.rs
src-tauri/tests/: multi_instance_test.rs
src/hooks/: useContextMenu.ts  useDebounce.ts  useIndexEvents.ts
src/i18n/: en.json  index.ts  ja.json
src/ipc/: commands.ts  events.ts  types.ts
src/models/: bookmarkColors.ts
src/stores/: bookmark.ts  config.ts  editor.ts  highlight.ts  notification.ts  search.ts  workspace.ts
src/theme/: colors.ts  global.css
src/utils/: fileIcons.ts
src/workers/: highlight.worker.ts  tokenizer.ts
tests/: setup.ts
tests/components/: ColorPalette.test.tsx  ContextMenu.test.tsx  HighlightItem.test.tsx  SearchResultList.test.tsx  TabContextMenu.test.tsx  codeview.test.tsx  explorer.test.tsx  layout.test.tsx  tabs.test.tsx
tests/driver/: helpers.mjs  run.mjs
tests/e2e/: 01_launch.test.ts  02_workspace.test.ts  03_search.test.ts  04_tab_operations.test.ts  05_settings.test.ts  06_bookmarks.test.ts  07_keyboard_shortcuts.test.ts  08_main_flows.test.ts  10_split_editor.test.ts  14_highlights.test.ts  (+17 more)
(+56 files in other folders)
