[package]
name = "codesearch"
version = "0.1.0"
description = "CodeSearch — ローカルコード検索ツール"
authors = ["you"]
edition = "2021"

[lib]
name = "codesearch_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"

# シリアライズ
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# エラーハンドリング
thiserror = "2"

# 非同期ランタイム
tokio = { version = "1", features = ["full"] }

# 全文検索エンジン
tantivy = "0.22"

# 日本語トークナイザ（lindera-tantivy は依存関係が複雑なため後で追加）
# lindera-tantivy = "0.31"

# データベース
rusqlite = { version = "0.32", features = ["bundled"] }

# ファイル監視
notify = "7"
notify-debouncer-mini = "0.4"

# エンコーディング
encoding_rs = "0.8"
chardetng = "0.1"

# 日時
chrono = { version = "0.4", features = ["serde"] }

# ログ
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
