[package]
name = "codesearch"
version = "0.1.0"
description = "CodeSearch — ローカルコード検索ツール"
authors = ["you"]
edition = "2021"

[lib]
name = "codesearch_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"

# シリアライズ
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# エラーハンドリング
thiserror = "2"

# 非同期ランタイム
tokio = { version = "1", features = ["full"] }

# 全文検索エンジン
tantivy = "0.22"

# 正規表現検索（フォールバック用）
regex = "1"

# 日本語トークナイザ（Unicode文字境界ベース N-gram、lindera は後で追加予定）
# lindera-tantivy = "0.31"

# データベース
rusqlite = { version = "0.32", features = ["bundled"] }

# ファイル監視
notify = "7"
notify-debouncer-mini = "0.4"

# glob パターンマッチング（除外パターン適用用）
glob = "0.3"

# ハッシュ（ワークスペースID生成用）
sha2 = "0.10"
hex = "0.4"

# エンコーディング
encoding_rs = "0.8"
chardetng = "0.1"

# ファイルロック（複数インスタンス対応）
fs2 = "0.4"

# 日時
chrono = { version = "0.4", features = ["serde"] }

# データディレクトリ解決
dirs-next = "2"

# ログ
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "search_bench"
harness = false
